--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Flyway will use the Spring Boot datasource settings by default
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-flyway.unknownDatabaseVersion=16
+spring.flyway.enabled=false
+//flyway.unknownDatabaseVersion=16
