Add OpenAPI Documentation(Swagger)

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 
     implementation 'org.flywaydb:flyway-core:10.15.0'
     implementation 'org.flywaydb:flyway-database-postgresql:10.15.0'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
